# ML_Project

./: .gitignore  README.md  eda.ipynb  environment.yml  evaluation.ipynb  mlp.py  pyproject.toml  run_mlp.ipynb
