[project]
name = "ml-project"
version = "0.1.0"
description = "Add your description here"
requires-python = "==3.11.*"
dependencies = [
    "ipykernel>=7.3.0",
    "ipython>=9.14.1",
    "numpy>=2.4.6",
    "tensorflow",
    "pandas>=2.2",
    "scikit-learn>=1.3",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "opencv-python>=4.8",
    "albumentations>=1.3",
    "tqdm>=4.65",
    "jupyterlab>=4.0",
    "pandas-stubs~=3.0.3",
]
